--- a/css/styles.css
+++ b/css/styles.css
@@ -503,15 +503,18 @@ color: #FFFFFF;
 
 .footer-container {
   display: flex;
-  gap: 70px;
   align-items: baseline;
+}
+
+.foter-contacts {
+  margin-right: 70px;
 }
 
 .footer-items {
   display: flex;
   flex-direction: column;
   gap: 9px;
-}
+  }
 
 .logo-footer {
   margin-bottom: 20px;
@@ -577,10 +580,6 @@ color: #FFFFFF;
 .social-links {
   margin-right: 93px;
 }
-
-.footer-subscription-form {
-
-  }
 
 .footer-subsubscription-form-group {
   display: flex;
@@ -774,7 +773,7 @@ transition: transform 300ms ease-in-out;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000px;
+  z-index: 1000;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -833,6 +832,14 @@ transition: transform 300ms ease-in-out;
 .modal-btn-icon {
 width: 11px;
 height: 11px;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transition-delay: 0s;
+}
+
+.modal-btn-icon:hover,
+.modal-btn-icon:focus {
+  fill: var(--acent-txt-cl);
 }
 
 
